tests/machine/x/go/dataset_where_filter.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/dataset_where_filter.go:12:14: undefined: PeopleItem
../../../tests/machine/x/go/dataset_where_filter.go:13:3: undefined: PeopleItem
../../../tests/machine/x/go/dataset_where_filter.go:17:3: undefined: PeopleItem
../../../tests/machine/x/go/dataset_where_filter.go:21:3: undefined: PeopleItem
../../../tests/machine/x/go/dataset_where_filter.go:25:3: undefined: PeopleItem
../../../tests/machine/x/go/dataset_where_filter.go:30:21: undefined: Adults
../../../tests/machine/x/go/dataset_where_filter.go:31:16: undefined: Adults
../../../tests/machine/x/go/dataset_where_filter.go:35:32: undefined: Adults

1: //go:build ignore
